# cargo-contribute

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: args.rs  crates_io.rs  display.rs  ext.rs  logging.rs  main.rs  util.rs
src/issues/: cargo_toml.rs  crates_io.rs  github.rs  mod.rs  model.rs  producer.rs
src/model/: github.rs  manifest.rs  mod.rs
