[package]
name = "cargo-contribute"
version = "0.0.1"
description = "Cargo subcommand for contributing to development of your dependencies"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
keywords = [
    "cargo",
    "subcommand",
    "contribute",
    "issues",
    "GitHub",
    "open source",
    "community",
]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/cargo-contribute"
homepage = "https://github.com/Xion/cargo-contribute"
repository = "https://github.com/Xion/cargo-contribute.git"

[dependencies]
ansi_term = "0.9"
exitcode = "1.1.2"
futures = "0.1.17"
hubcaps = "0.4.2"
isatty = "0.1.1"
lazy_static = "0.2"
log = "0.3"
maplit = "0.1"
slog = "1.5.2"
slog-envlogger = "0.5"
slog-stdlog = "1.1"
slog-stream = "1.2"
time = "0.1"
tokio-core = "0.1.10"
