[package]
name = "cargo-contribute"
version = "0.0.1"
description = "Cargo subcommand for contributing to development of your dependencies"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
keywords = [
    "cargo",
    "subcommand",
    "contribute",
    "issues",
    "GitHub",
    "open source",
    "community",
]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/cargo-contribute"
homepage = "https://github.com/Xion/cargo-contribute"
repository = "https://github.com/Xion/cargo-contribute.git"

[dependencies]
ansi_term = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.26.0"
conv = "0.3"
derive-error = "0.0.3"
exitcode = "1.1.2"
futures = "0.1.17"
hubcaps = "0.4.2"
hyper = "0.11"
isatty = "0.1.1"
lazy_static = "0.2"
log = "0.3"
maplit = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "1.5.2"
slog-envlogger = "0.5"
slog-stdlog = "1.1"
slog-stream = "1.2"
tokio-core = "0.1.10"
